scanblog/static/css/moderation/_scans.sass
.success
  background-color: #eff
  border: 1px solid #99f
  padding: 0.5em
.warn
  background-color: #ffe
  border: 1px solid #f9e
  padding: 0.5em
.post-save-message
  display: inline-block

.process-list
  li
    position: relative
    @include inline-block
    margin: 10px
    text-align: center

    a.scan
      width: 100px
      height: 120px
      display: block
      @include border-radius(10px)
      border: 3px solid gray
      padding: 10px
    a:hover, a:active
      background-color: yellow

    a.delete-scan
      position: absolute
      top: 0
      right: 0
      display: none
    &:hover a.delete-scan
      display: block

    div.img-holder
      width: 100px
      height: 100px
    img
      max-width: 100%
      max-height: 100%

    .being-edited
      font-size: 12px
      display: block
      +background-image(linear-gradient(color-stops(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8))))
      position: absolute
      width: 100px
      color: blue

    .name
      font-size: 11px
      width: 100px
      height: 15px
      line-height: 15px
      overflow: hidden
      text-overflow: ellipsis


.split-scan
  div.page-image
    border: 2px solid white
  div.page-image.in-viewport
    border: 2px solid green
  .page-size-chooser
    .small, .medium, .large
      +flat-button
    .small
      +flat-button-position(left)
      font-size: 0.8em
    .medium
      +flat-button-position(middle)
      font-size: 1em
    .large
      +flat-button-position(right)
      font-size: 1.2em
    .chosen
      background-color: #fed
  .delete-scan, .replace-scan, .reparse-scan, .merge-scan
    +flat-button
  .delete-scan
    +flat-button-sprite(delete)
    +flat-button-position(left)
  .replace-scan, .reparse-scan
    +flat-button-position(middle)
  .merge-scan
    +flat-button-position(right)
  .controls
    padding: 0.5em
    +single-box-shadow(#000)
    z-index: 1
    position: fixed
    bottom: 0px
    right: 0px
    width: 550px
    max-height: 80%
    overflow: auto

    +background-image(linear-gradient(color-stops(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9))))

    .notes
      float: right

    ul.ignore-choice, ul.type-list
      display: inline-block
    ul.type-list
      margin-top: 0.5em
      margin-bottom: 0.5em

    // buttons
    .page-type-choice
      +user-select(none)
      +flat-button
      +flat-button-position(left)
      padding-bottom: 0.1em
      input
        display: none
      &.chosen
        +flat-button-sprite($sprite: save)
        background-color: #fed
    ul.type-list li
      display: inline-block
      margin: 0
    .save, .switch-to-edit-documents
      +flat-button($size: big)
    .next, .prev, .add-post, .add-photo
      +user-select(none)
      +flat-button
    .next, .add-post, .save
      +flat-button-position(left)
    .prev, .add-photo, .edit-documents
      +flat-button-position(right)
    .save
      +flat-button-sprite($size: big, $sprite: save)
    .add-post, .add-photo
      +flat-button-sprite($sprite: add)
    .next, .prev
      font-weight: bold
      color: black

  .page-scroller
    height: 150px
    +clearfix
  .page-flip, .type-list, .add-post, .add-photo, .save, .edit-documents
  .pagestatus
    +clearfix
    position: relative
    z-index: 0
    float: left
    border: 1px solid transparent
    cursor: pointer
    img
      z-index: 0
    .overlay
      position: absolute
      top: 0
      left: 0
      width: 100%
      height: 100%
      z-index: 1
      background-color: transparent
      opacity: 0.2
    &.in-viewport
      border: 1px solid green
    &:hover .overlay
      background-color: #aaa
    &.assigned .overlay
      background-color: #090
    &.assigned:hover .overlay
      background-color: #3f3

.split-scan .lock-warning li, .edit-document .lock-warning li
  background-color: #fee
  border: 1px solid #faa
  padding: 1em

